force-app/main/default/objects/Storefront_Item__c/Storefront_Item__c.object-meta.xml
<CustomObject>
    <description>List of items that make up the Storefront</description>
    <label>Storefront Item</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Storefront Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storefront Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>