force-app/main/default/objects/Storefront_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the storefront item</description>
    <label>Description</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
</CustomField>