force-app/main/default/objects/Storefront_Item__c/fields/External_Id_Items__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Items__c</fullName>
    <externalId>true</externalId>
    <label>External Id Items</label>
    <length>20</length>
    <type>Text</type>
</CustomField>