force-app/main/default/objects/Storefront_Item__c/fields/In_App_Guidance_Link__c.field-meta.xml
<CustomField>
    <fullName>In_App_Guidance_Link__c</fullName>
    <description>Link to the In-App Guidance Walkthrough</description>
    <label>In App Guidance Link</label>
    <type>Url</type>
</CustomField>