force-app/main/default/objects/Storefront_Item__c/fields/Storefront_Collection__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Collection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Storefront Collection</label>
    <referenceTo>Storefront_Collection__c</referenceTo>
    <relationshipLabel>Storefront Items</relationshipLabel>
    <relationshipName>Storefront_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>