force-app/main/default/objects/Storefront_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>External_Id__c</columns>
    <columns>External_Id_Items__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>